# platform.core.accessibility.screen-reader

./: CMakeLists.sub  CMakeLists.txt  LICENSE  README  org.tizen.screen-reader.manifest  org.tizen.screen-reader.xml  org.tizen.screen-reader.xml.in
include/: app_tracker.h  common_helpers.h  dbg.h  dbus_direct_reading_adapter.h  dbus_gesture_adapter.h  elm_access_adapter.h  etest.h  flat_navi.h  gesture_tracker.h  keyboard_tracker.h  logger.h  lua_engine.h  navigator.h  object_cache.h  pivot_chooser.h  position_sort.h  screen_reader.h  screen_reader_actions.h  screen_reader_gestures.h  screen_reader_haptic.h  screen_reader_spi.h  screen_reader_switch.h  screen_reader_system.h  screen_reader_tts.h  screen_reader_vconf.h  smart_notification.h  structural_navi.h  window_tracker.h
packaging/: org.tizen.screen-reader.spec
res/po/: CMakeLists.txt  en_US.po
res/scripts/: mobile.lua  tv.lua
src/: app_tracker.c  dbus_direct_reading_adapter.c  dbus_gesture_adapter.c  elm_access_adapter.c  flat_navi.c  gesture_tracker.c  keyboard_tracker.c  logger.c  lua_engine.c  main.c  navigator.c  object_cache.c  pivot_chooser.c  position_sort.c  screen_reader.c  screen_reader_actions.c  screen_reader_gestures.c  screen_reader_haptic.c  screen_reader_spi.c  screen_reader_switch.c  screen_reader_system.c  screen_reader_tts.c  screen_reader_vconf.c  smart_notification.c  structural_navi.c  window_tracker.c
tests/: CMakeLists.sub  CMakeLists.txt  screen_reader_test_suite.c  smart_navi_suite.c
tests/atspi/: atspi.c  atspi.h
