CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ENABLE_TESTING()

# FIND ALL SOURCE IN A SOURCE DIRECTORY
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/src SRCS)

#INCLUDE FILE 
INCLUDE(CMakeLists.sub)
SET(RESOURCE_DIR "${CMAKE_SOURCE_DIR}/res")

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
	capi-appfw-application
	bundle
	atspi-2
	gobject-2.0
	dlog
	vconf
	tts
	capi-system-device
)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS_DUMP "${CMAKE_C_FLAGS}")
SET(CMAKE_CXX_FLAGS_DUMP "${CMAKE_CXX_FLAGS}")
SET(CMAKE_C_FLAGS "${SLP_DEBUG_FLAGS} ${SLP_OPT_FLAGS} ${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} ${SLP_COMPILER_FLAGS}")
SET(CMAKE_CXX_FLAGS "${SLP_DEBUG_FLAGS} ${SLP_OPT_FLAGS} ${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} ${SLP_COMPILER_FLAGS}")

MESSAGE(${CMAKE_C_FLAGS})

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} ${SLP_LD_PATH_FLAGS} ${SLP_LD_FLAGS} ${SLP_LINKER_FLAGS})

# Install 
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
INSTALL(DIRECTORY ${RESOURCE_DIR}/icons DESTINATION res) 
# Install Manifest File
INSTALL(FILES org.tizen.screen-reader.xml DESTINATION /usr/share/packages)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/tests)
ADD_TEST(NAME screen_reader_test_suite COMMAND ${CMAKE_SOURCE_DIR}/tests/screen_reader_test_suite)
# END OF A FILE
