CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ENABLE_TESTING()

# FIND ALL SOURCE IN A SOURCE DIRECTORY
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/src SRCS)

#INCLUDE FILE
INCLUDE(CMakeLists.sub)
SET(RESOURCE_DIR "${CMAKE_SOURCE_DIR}/res")
SET(LOCALEDIR "/usr/apps/org.tizen.screen-reader/res/locale")

IF("${SEC_FEATURE_TAPI_ENABLE}" STREQUAL "1")
	MESSAGE("STATUS_SEC:/-${SEC_FEATURE_TAPI_ENABLE}-/")
	SET(TAPI_REQUIRED_PKG "tapi")
	ADD_DEFINITIONS("-DSCREEN_READER_MOBILE")
ENDIF ()

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
	bundle
	appcore-efl
	eldbus
	elementary
	ecore
	atspi-2
	gobject-2.0
	ecore-x
	dlog
	vconf
	tts
	capi-media-tone-player
	capi-system-device
	capi-network-bluetooth
	notification
	capi-network-wifi
	${TAPI_REQUIRED_PKG}
)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS_DUMP "${CMAKE_C_FLAGS}")
SET(CMAKE_CXX_FLAGS_DUMP "${CMAKE_CXX_FLAGS}")
SET(CMAKE_C_FLAGS "${SLP_DEBUG_FLAGS} ${SLP_OPT_FLAGS} ${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} ${SLP_COMPILER_FLAGS} -fPIE")
SET(CMAKE_CXX_FLAGS "${SLP_DEBUG_FLAGS} ${SLP_OPT_FLAGS} ${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} ${SLP_COMPILER_FLAGS}")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} ${SLP_LD_PATH_FLAGS} ${SLP_LD_FLAGS} ${SLP_LINKER_FLAGS} "-pie")

# Install 
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
INSTALL(DIRECTORY ${RESOURCE_DIR}/icons DESTINATION res) 
# Install Manifest File
INSTALL(FILES org.tizen.screen-reader.xml DESTINATION /opt/share/packages)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/res/po)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/tests)
ADD_TEST(NAME smart_navi_tests COMMAND ${CMAKE_SOURCE_DIR}/tests/smart_navi_test_suite)
# END OF A FILE
